# side

./: .gitignore  .sovereignignore  ARCHITECTURE.md  HANDOVER_FINAL.md  LICENSE.md  MARKETING_CONTENT_STOCK.md  PRIVACY.md  README.md  SECURITY.md  SOVEREIGN_ANCHOR.md  SOVEREIGN_CAPABILITIES.md  SOVEREIGN_CYCLE.md  STRATEGY.md  ULTRA_REALISTIC_AMNESIA_SIM.md  VISION.md  debug_tree_sitter.py  lockdown_test.db-shm  lockdown_test.db-wal  requirements.txt  side_graph.sqlite  verify_polyglot.py  verify_prio.py
backend/: .env.example  .gitignore  Dockerfile  LICENSE  README.md  TROUBLESHOOTING.md  VISION.md  audit_summary.txt  benchmark_mmap.py  benchmark_pulse.py  debt_report.json  prove_transparency.py  pyproject.toml  railway.toml  requirements.txt  run_server.py  show_off_audit.py  task.md  verify_fts.py  verify_init.py  verify_polyglot.py  view_logs.py
backend/docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  ROADMAP.md
backend/scripts/: run_audit.py  run_sim.py  test_tools.py  verify_architect.py  verify_builder.py  verify_expert.py  verify_scaler.py  verify_sim.py
backend/src/: auth_test_result.txt  cli_import_profile.txt  debug_monolith.py  import_profile.txt
backend/src/cso_ai/: __init__.py  logging_config.py  server.py  strategic_engine.py  tools_refined.py
backend/src/cso_ai/intel/: __init__.py  auditor.py  auto_intelligence.py  context_compressor.py  domain.py  forensic_engine.py  guard.py  intelligence_store.py  market.py  signals.py  simulator.py  strategist.py  technical.py
backend/src/cso_ai/services/: __init__.py  cleanup_scheduler.py  context_tracker.py  supabase_sync.py
backend/src/cso_ai/sources/: __init__.py  github.py  hackernews.py
backend/src/cso_ai/storage/: __init__.py
backend/src/cso_ai/tools/: __init__.py  core.py  formatting.py  planning.py
backend/src/cso_ai/utils/: __init__.py  cache_warmer.py  performance.py  retry.py
backend/src/side/: __init__.py  big_file.py  cli.py  config.py  env.py  health.py  important_system.py  logging_config.py  mcp_server.py  onboarding.py  prompts.py  pulse.py  resources.py  server.py  server_fast.py  simulate_dream_journey.py  simulate_organism.py  simulate_sovereign_best_practices.py  simulate_sovereign_intelligence.py  strategic_engine.py  telemetry.py  temp_violation.py  test_brain_persistence.py  test_groq_mvp_pricing.py  test_premium_pricing.py  test_pulse.py  test_silent.py  test_sovereign_protocol.py  test_su_pricing.py  tools_handler.py  verify_causal_flow.py  verify_intent_roi.py  verify_profound.py  verify_spearhead.py  verify_task_engine.py  watcher_daemon.py
backend/src/side/auth/: __init__.py  fastapi_deps.py  github.py  supabase_auth.py  users.py
backend/src/side/cli_handlers/: __init__.py  audit.py  auth.py  connect.py  intel.py  session.py  utils.py  wizard.py
backend/src/side/cloud/: api.py  limiter.py
backend/src/side/common/: __init__.py  constants.py  notifications.py  telemetry.py
backend/src/side/data/: __init__.py  secret_patterns.json
backend/src/side/decorators/: __init__.py  audit_logger.py  forensic_logger.py
backend/src/side/env/: __init__.py
backend/src/side/forensic_audit/: __init__.py  architecture_advisor.py  core.py  deployment_gotchas.py  runner.py
backend/src/side/handlers/: __init__.py  friction_points.py
backend/src/side/hooks/: __init__.py  side_shell_hook.sh
backend/src/side/instrumentation/: engine.py
backend/src/side/intel/: README.md  __init__.py  adaptive_context_engine.py  advanced_scoring.py  api.py  audit_allowlist.py  auditor.py  auto_intelligence.py  base.py  boardroom.py  bridge.py  causal_miner.py  chronos.py  cloud_distiller.py  code_auditor.py  code_monitor.py  code_validator.py  connector.py  context_allocator.py  context_compressor.py  context_service.py  conversation_ingester.py  conversation_session.py  decision_history.py  domain.py  drill_compliance.py  drill_cursor.py  drill_ecosystem.py  drill_full_summit.py  drill_intent.py  drill_phase_2.py  drill_phase_3.py  drill_scavenger.py  drill_summit.py  episodic_projector.py  evaluator.py  feed_registry.py  forensic_allowlist.py  forensic_engine.py  fractal_indexer.py  (+54 more)
backend/src/side/intelligence/: __init__.py  (+5 more)
backend/supabase/: schema.sql
backend/supabase/migrations/: 002_tenant_isolation.sql  003_wallet_ledger.sql  003_wallet_ledger_fix.sql  004_billing_fields.sql  005_fix_profile_perms.sql
backend/tests/: __init__.py  benchmark_fractal.py  load_test_projects.py  load_test_rls.py  stress_governor.py  stress_mcp.py  stress_test_e2e.py  test_auto_intelligence.py  test_circuit_breaker.py  test_errors.py  test_mesh_integration.py  test_mmap_performance.py  test_ollama_airgap.py  test_phoenix_recovery.py  test_polyglot.rs  test_polyglot.ts  test_pulse_latency.py  test_query_cache.py  test_resource_limits.py  test_simple_db.py  test_strategic_engine.py  test_task_decomposer.py  test_technical.py
backend/tests/forensic_audit/: test_probes.py
backend/tests/hostile/: test_hostile_verify_scaler.py
backend/tests/red_team/: test_firewall_leak.py  test_full_sovereign_cycle.py  test_latency_storm.py  test_neural_uplink.py
(+499 files in other folders)
