[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "side-ai"
version = "0.1.0"
description = "Your AI Chief Strategy Officer - Strategic intelligence that understands your codebase, business, and market"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "CSO.ai Team" }
]
keywords = [
    "mcp", 
    "ai", 
    "strategy", 
    "cso", 
    "intelligence",
    "codebase-analysis",
    "business-intelligence",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "tree-sitter==0.21.3",
    "tree-sitter-languages>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
side = "side.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/side"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
