[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sidelith"
version = "1.0.0"
description = "Palantir-level strategic intelligence for your IDE."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sidelith Team" }
]
keywords = [
    "mcp", 
    "ai", 
    "strategy", 
    "sidelith", 
    "intelligence",
    "codebase-analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.4.1",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "tree-sitter==0.21.3",
    "tree-sitter-languages>=1.10.0",
    "passlib[bcrypt]>=1.7.4",
    "feedparser>=6.0.11",
    "sqlmodel>=0.0.14",
    "supabase>=2.4.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "posthog-python>=3.5.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
sidelith = "side.server:main"
sidelith-serve = "side.server:main"
side = "side.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/side"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
