[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sidelith"
version = "1.1.0"
description = "Palantir-level strategic intelligence for your IDE."
readme = "README.md"
license = "Proprietary"
requires-python = ">=3.11"
authors = [
    { name = "Sidelith Team" }
]
keywords = [
    "mcp", 
    "ai", 
    "strategy", 
    "sidelith", 
    "intelligence",
    "codebase-analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.4.1",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "tree-sitter==0.21.3",
    "tree-sitter-languages>=1.10.0",
    "passlib[bcrypt]>=1.7.4",
    "feedparser>=6.0.11",
    "sqlmodel>=0.0.14",
    "supabase>=2.4.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "posthog>=3.5.0",
    "openai>=1.0.0",
    # Forensics tools - Auto-installed for security scanning
    "semgrep>=1.45.0,<2.0.0",  # Primary polyglot security scanner
    "bandit>=1.7.0,<2.0.0",     # Python-specific security depth
    "numpy>=1.26.0",            # Mmap acceleration
]

[project.optional-dependencies]
# Airgap mode: Full database encryption for HiTech/Enterprise tiers
# Install with: pip install sidelith[airgap]
airgap = [
    "pysqlcipher3>=1.2.0",  # Full SQLite encryption (256-bit AES)
    "keyring>=24.0.0",       # OS keychain integration
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
sidelith = "side.server:main"
sidelith-serve = "side.server:main"
side = "side.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/side"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
